--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <p id="demo">0:0</p>
         </div>
 
-        <script> 
+        <script type="module">
+            import createKeyboardListener from './keyboardListener.js'
 
             const screen = document.getElementById("screen")
             const context = screen.getContext("2d")
@@ -173,42 +174,6 @@
             
 
 
-            function createKeyboardListener() {
-                const state = {
-                    observers: []
-                }
-
-                // placing observers
-                function subscribe(observerFunction) {
-                    state.observers.push(observerFunction)
-                }
-
-                // notify the observers about the value
-                function notifyAll(command) {
-                    console.log(`keyBoardListener -> Notifying ${state.observers.length} observers`)
-
-                    for (const observerFunction of state.observers) {
-                        observerFunction(command)
-                    }
-                }
-
-                document.addEventListener('keydown', handleKeyDown) // Get the value
-
-                function handleKeyDown(event) {
-                    const keyPressed = event.key
-
-                    const command = {
-                        playerId : 'player1', 
-                        keyPressed
-                    }
-
-                    notifyAll(command)
-                }
-
-                return {
-                    subscribe
-                }
-            }
 
             renderScreen()
             
